docs: Rewrite README.md to be more professional and comprehensive
- Add visual badges (build, license, stars, forks, f-droid, release)
- Enhance descriptions with emojis and better formatting
- Add detailed installation, usage, API, contributing, and contact sections
- Include screenshot placeholders

Co-authored-by: bunty615107 <78595911+bunty615107@users.noreply.github.com>